[gd_scene load_steps=9 format=3 uid="uid://dl8c4h15foeou"]

[ext_resource type="Script" path="res://Boss/Bayangan/punch_ground.gd" id="1_2a7jo"]
[ext_resource type="Texture2D" uid="uid://bste7d7lv3fa3" path="res://Assets/Factions/Bosses/Bayangan/Tangan 3.png" id="2_wk7mp"]
[ext_resource type="Texture2D" uid="uid://dl8oi0j6bqs6e" path="res://Assets/Factions/Bosses/Bayangan/Tangan 2.png" id="3_unomt"]
[ext_resource type="Texture2D" uid="uid://d138rnbm16x4b" path="res://Assets/Factions/Bosses/Bayangan/Tangan 1.png" id="4_4reht"]

[sub_resource type="SpriteFrames" id="SpriteFrames_phudv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wk7mp")
}, {
"duration": 1.0,
"texture": ExtResource("3_unomt")
}, {
"duration": 1.0,
"texture": ExtResource("4_4reht")
}],
"loop": false,
"name": &"punchground",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ty6m4"]
size = Vector2(40.9819, 37)

[sub_resource type="Animation" id="Animation_1gxip"]
resource_name = "punch_ground"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rad5e"]
_data = {
"punch_ground": SubResource("Animation_1gxip")
}

[node name="PunchGround" type="Area2D"]
scale = Vector2(18.28, 18.28)
script = ExtResource("1_2a7jo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.842697, -0.561798)
scale = Vector2(0.079923, 0.079923)
sprite_frames = SubResource("SpriteFrames_phudv")
animation = &"punchground"
frame = 2
frame_progress = 1.0

[node name="CollisionPunch3" type="CollisionShape2D" parent="."]
position = Vector2(0.561798, 0.842697)
scale = Vector2(0.119008, 0.0809908)
shape = SubResource("RectangleShape2D_ty6m4")
disabled = true

[node name="CollisionPunch2" type="CollisionShape2D" parent="."]
position = Vector2(0.547046, -0.273523)
scale = Vector2(0.119008, 0.0700499)
shape = SubResource("RectangleShape2D_ty6m4")
disabled = true

[node name="CollisionPunch1" type="CollisionShape2D" parent="."]
position = Vector2(0.547046, -1.96937)
scale = Vector2(0.119008, 0.083179)
shape = SubResource("RectangleShape2D_ty6m4")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rad5e")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
